// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conjugation can be parsed: toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Original",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [
            {
              "$type": "FeatureMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Feature",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "Input",
                "direction": "in",
                "filters": [],
                "imports": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Conjugate1",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Conjugate2",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Conjugation",
          "annotations": [],
          "chains": [],
          "declaredName": "c1",
          "elements": [],
          "prefixes": [],
          "reference": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "Original",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [
                    {
                      "$type": "FeatureMembership",
                      "annotations": [],
                      "chains": [],
                      "element": {
                        "$type": "Feature",
                        "aliases": [],
                        "annotatingMembers": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "filters": [],
                        "imports": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "members": [],
                        "namespaceMembers": [],
                        "prefixes": [],
                        "relationshipMembers": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                      "prefixes": [],
                    },
                  ],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "Conjugate1",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Conjugation",
          "annotations": [
            {
              "$type": "Annotation",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Documentation",
                "about": [],
                "body": "/* same as c1 */",
                "prefixes": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "chains": [],
          "declaredName": "c2",
          "elements": [],
          "prefixes": [],
          "reference": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "Original",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [
                    {
                      "$type": "FeatureMembership",
                      "annotations": [],
                      "chains": [],
                      "element": {
                        "$type": "Feature",
                        "aliases": [],
                        "annotatingMembers": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "filters": [],
                        "imports": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "members": [],
                        "namespaceMembers": [],
                        "prefixes": [],
                        "relationshipMembers": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                      "prefixes": [],
                    },
                  ],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "Conjugate2",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
        "prefixes": [],
      },
    ],
  },
}
`;

exports[`conjugation may be omitted without identifiers with '~': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Original",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [
            {
              "$type": "FeatureMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Feature",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "Input",
                "direction": "in",
                "filters": [],
                "imports": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Conjugate1",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Conjugate2",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Conjugation",
          "annotations": [],
          "chains": [],
          "elements": [],
          "prefixes": [],
          "reference": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "Original",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [
                    {
                      "$type": "FeatureMembership",
                      "annotations": [],
                      "chains": [],
                      "element": {
                        "$type": "Feature",
                        "aliases": [],
                        "annotatingMembers": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "filters": [],
                        "imports": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "members": [],
                        "namespaceMembers": [],
                        "prefixes": [],
                        "relationshipMembers": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                      "prefixes": [],
                    },
                  ],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "Conjugate1",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
        "prefixes": [],
      },
    ],
  },
}
`;

exports[`conjugation may be omitted without identifiers with 'conjugates': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Original",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [
            {
              "$type": "FeatureMembership",
              "annotations": [],
              "chains": [],
              "element": {
                "$type": "Feature",
                "aliases": [],
                "annotatingMembers": [],
                "declaredName": "Input",
                "direction": "in",
                "filters": [],
                "imports": [],
                "isNonunique": false,
                "isOrdered": false,
                "isSufficient": false,
                "members": [],
                "namespaceMembers": [],
                "prefixes": [],
                "relationshipMembers": [],
                "typeRelationships": [],
              },
              "elements": [],
              "prefixes": [],
            },
          ],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Conjugate1",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Conjugate2",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Conjugation",
          "annotations": [],
          "chains": [],
          "elements": [],
          "prefixes": [],
          "reference": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "Original",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [
                    {
                      "$type": "FeatureMembership",
                      "annotations": [],
                      "chains": [],
                      "element": {
                        "$type": "Feature",
                        "aliases": [],
                        "annotatingMembers": [],
                        "declaredName": "Input",
                        "direction": "in",
                        "filters": [],
                        "imports": [],
                        "isNonunique": false,
                        "isOrdered": false,
                        "isSufficient": false,
                        "members": [],
                        "namespaceMembers": [],
                        "prefixes": [],
                        "relationshipMembers": [],
                        "typeRelationships": [],
                      },
                      "elements": [],
                      "prefixes": [],
                    },
                  ],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
          "source": {
            "$type": "TypeReference",
            "parts": [
              {
                "error": undefined,
                "ref": {
                  "$type": "Class",
                  "aliases": [],
                  "annotatingMembers": [],
                  "declaredName": "Conjugate1",
                  "filters": [],
                  "imports": [],
                  "isSufficient": false,
                  "members": [],
                  "namespaceMembers": [],
                  "prefixes": [],
                  "relationshipMembers": [],
                  "typeRelationships": [],
                },
              },
            ],
          },
        },
        "elements": [],
        "prefixes": [],
      },
    ],
  },
}
`;

exports[`type can declare owned conjugations with '~': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Original",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Conjugate1",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [
            {
              "$type": "Conjugation",
              "annotations": [],
              "chains": [],
              "elements": [],
              "prefixes": [],
              "reference": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "aliases": [],
                      "annotatingMembers": [],
                      "declaredName": "Original",
                      "filters": [],
                      "imports": [],
                      "isSufficient": false,
                      "members": [],
                      "namespaceMembers": [],
                      "prefixes": [],
                      "relationshipMembers": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;

exports[`type can declare owned conjugations with 'conjugates': toParseKerML 1`] = `
{
  "diagnostics": [],
  "lexerErrors": [],
  "parserErrors": [],
  "value": {
    "$type": "Namespace",
    "aliases": [],
    "annotatingMembers": [],
    "filters": [],
    "imports": [],
    "members": [],
    "namespaceMembers": [
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Original",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [],
        },
        "elements": [],
        "prefixes": [],
      },
      {
        "$type": "OwningMembership",
        "annotations": [],
        "chains": [],
        "element": {
          "$type": "Class",
          "aliases": [],
          "annotatingMembers": [],
          "declaredName": "Conjugate1",
          "filters": [],
          "imports": [],
          "isSufficient": false,
          "members": [],
          "namespaceMembers": [],
          "prefixes": [],
          "relationshipMembers": [],
          "typeRelationships": [
            {
              "$type": "Conjugation",
              "annotations": [],
              "chains": [],
              "elements": [],
              "prefixes": [],
              "reference": {
                "$type": "ClassifierReference",
                "parts": [
                  {
                    "error": undefined,
                    "ref": {
                      "$type": "Class",
                      "aliases": [],
                      "annotatingMembers": [],
                      "declaredName": "Original",
                      "filters": [],
                      "imports": [],
                      "isSufficient": false,
                      "members": [],
                      "namespaceMembers": [],
                      "prefixes": [],
                      "relationshipMembers": [],
                      "typeRelationships": [],
                    },
                  },
                ],
              },
            },
          ],
        },
        "elements": [],
        "prefixes": [],
      },
    ],
    "prefixes": [],
    "relationshipMembers": [],
  },
}
`;
